@@ -1,5 +1,8 @@
 2009-09-20  Per Bothner  <per@bothner.com>
 
+	* standard/IfFeature.java: Define string-normalize-unicode feature
+	if PreProcess name use:java.text.Normalizer enabled.
+
 	* standard/Scheme.java (initScheme): Update quotient, remainder, and
 	modulo, which are now implemented by DivideOp.
 	Add R6RS functions div, mod, div0, mod0, div-and-mod, div0-and-mod0.
